# critwm

./: Cargo.toml  LICENSE  README.md  build.rs
src/: backend.rs  config.def.rs  config.rs  error.rs  lib.rs  main.rs  socket.rs  util.rs
src/backend/: api.rs  atom.rs  client.rs  hints.rs  mod.rs  monitor.rs  signal.rs
src/layouts/: float.rs  mod.rs  tile.rs
