[package]
name = "critwm"
version = "0.1.0"
authors = ["Edward Wibowo <wibow9770@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11-dl = "2.18.5"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.8.3"
