[package]
name = "critwm"
version = "0.1.0"
authors = ["Edward Wibowo <wibow9770@gmail.com>"]
edition = "2021"

[lib]
name = "critwm"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11-dl = "2.21.0"
lazy_static = "1.4.0"
log = "0.4.19"
env_logger = "0.10.0"
tokio = { version = "1.29.1", features = ["sync", "rt", "io-util", "rt-multi-thread", "fs", "macros", "net"] }
serde = { version = "1.0.171", features = ["derive", "rc"] }
serde_json = "1.0.102"
clap = { version = "4.3.12", features = ["derive"] }
